# _GraphQL

./: README.md  pyproject.toml  setup.py
patisson_graphql/: __init__.py  selected_fields.py  stmt_filter.py
patisson_graphql/fastapi_handlers/: __init__.py  api.py
patisson_graphql/framework_utils/: fastapi.py
tests/: test_stmt_filter.py
