[tool.poetry]
name = "patisson-graphql"
version = "1.3.2"
description = "tools for developing microservices using GraphQL"
authors = ["EliseyGodX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
ariadne = "^0.24.0"
patisson-request = { git = "https://github.com/Patisson-Company/_Request", optional = true }
fastapi = { version = "^0.115.6", optional = true }


[tool.poetry.group.dev.dependencies]
patisson-request = { git = "https://github.com/Patisson-Company/_Request" }
fastapi = "^0.115.6"
pytest = "^8.3.4"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.25.0"
pytest-flake8 = "^1.3.0"
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
flake8-bugbear = "^24.12.12"
flake8-pyproject = "^1.2.3"
flake8-docstrings = "^1.7.0"
black = "^24.10.0"


[tool.poetry.extras]
fastapi-utils = ["fastapi", "patisson-request"]

[tool.black]
line-length = 110

[tool.flake8]
max-line-length = 110
required-plugins = [
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyproject",
    "mccabe",
    "pycodestyle",
    "pyflakes",
]
ignore = [
    "B907",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D104",
    "D106",
    "D107",
    "E701",
    "I001",
    "I005",
    "W503",
]
select = ["ANN", "B", "C", "D", "E", "F", "I", "T4", "W"]
extend-select = ["B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
